--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,7 @@
         <h1 style="color:blue"><b>Hello Whale !!</b></h1>
         <img src="images/docker.png"
         <p>This page is served from a <strong>docker</strong> container running Nginx.</p>
+      <p>Triggered a build</p>
       </div>
     </div>
   </div>
